refactor: remove usage of preview features